# IDA-Master-Windows

./: .gitignore  builder.sh  buildproc.txt  py_runner.py  temp.sh  test_sunlinsol_superlumt.c
examples/: idaHeat2D_bnds.c  idaRoberts_dnsp.c
ida-6.7.0/cmake/tpl/: FindKLU.cmake
ida-7.0.0/build2/: CMakeCache.txt  Makefile  SUNDIALSConfig.cmake  SUNDIALSTargets.cmake  cmake_install.cmake  install_manifest.txt
ida-7.0.0/build2/KLU_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ltest.c
ida-7.0.0/build2/POSIX_TIMER_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ida-7.0.0/build2/SUPERLUMT_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ltest.c
ida-7.0.0/build2/include/sundials/: sundials_config.h  sundials_export.h
ida-7.0.0/build2/src/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/ida/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/nvector/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/sunadaptcontroller/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/sundials/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/sunlinsol/: Makefile  cmake_install.cmake
ida-7.0.0/build2/src/sunmatrix/: Makefile  cmake_install.cmake
ida-7.0.0/cmake/tpl/: FindKLU.cmake
install/include/sundials/: sundials_config.h
lustuff/: klu.bat
suitesparse/: Makefile
sundials/include/sundials/: sundials_config.h
superlu/: make.inc
superlu/lib/: funcs.txt
superlu_mt/: make.inc
superlu_mt/EXAMPLE/: pcrepeat.c
superlu_mt/SRC/: get_perm_c.c
(+54 files in other folders)
