CMAKE_MINIMUM_REQUIRED(VERSION 3.27.4)
PROJECT(ltest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_C_COMPILER "C:/msys64/mingw64/bin/cc.exe")
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_FLAGS "")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ltest ltest.c)
TARGET_INCLUDE_DIRECTORIES(ltest PRIVATE C:/Coding/Research/IDA-Temp/superlu/SRC)
TARGET_LINK_LIBRARIES(ltest C:/coding/research/ida-temp/superlu/lib/libsuperlu_mt_PTHREAD.a)
